@@ -9,7 +9,7 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="4"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="288"
+VERSION_BUILD="289"
 
 # $Log$
 #
